tests/compile_fail/hash/unknown_struct_attribute.rs
#[derive(derive_more::Hash)]
#[hash(unknown)]
struct Foo(i32);

fn main() {}