tests/compile_fail/hash/unknown_struct_attribute.stderr
error: only `skip`/`ignore` allowed here
 --> tests/compile_fail/hash/unknown_struct_attribute.rs:2:8
  |
2 | #[hash(unknown)]
  |        ^^^^^^^
